--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@
             flex-wrap: wrap;
             width: 79%;
             margin: 175px auto 30px;
-            
+
             .item {
                 /* width: 50%; */
                 flex: 1 1 30rem;
@@ -218,10 +218,316 @@
                     }
 
                     a:hover {
-                        border-bottom: 2px solid blue;
+                        text-decoration: underline;
+                        text-underline-offset: 1px;
+                        text-decoration-thickness: 2px;
                     }
 
                 }
+            }
+        }
+
+        footer {
+            display: flex;
+            flex-wrap: wrap;
+            background-color: black;
+            height: 25rem;
+            padding: 0 7%;
+            overflow: hidden;
+
+
+            .container {
+                display: flex;
+                flex-flow: wrap column;
+                color: white;
+                flex: 0 0 10.5rem;
+                min-width: 10.5rem;
+                max-width: 33%;
+                margin-top: 30px;
+
+                h2 {
+                    margin: 20px 0;
+                    font-size: 22px;
+                    font-weight: 700;
+                }
+
+                a {
+                    color: white;
+                    margin-bottom: 5px;
+                }
+
+                a:hover {
+                    text-decoration: underline;
+                }
+            }
+
+            #plus {
+                height: 80%;
+
+                div {
+                    margin-top: 30px;
+
+                    h3 {
+                        font-size: 16px;
+                    }
+                }
+            }
+
+            .bottom {
+                flex: 0 0 25.995rem;
+                max-width: 100%;
+                min-width: 30%;
+                color: white;
+                align-self: end;
+                justify-self: end;
+                display: flex;
+                flex-flow: wrap column;
+                justify-content: end;
+                align-content: end;
+                margin-bottom: 60px;
+
+                .abstract-logo-footer {
+                    width: 145px;
+                }
+
+                div {
+                    display: flex;
+                    flex-flow: column wrap;
+                    margin-top: 15px;
+
+                    span {
+                        margin-top: 5px;
+                        font-size: 20px;
+                    }
+                }
+
+            }
+
+            >div {
+                height: 50%;
+            }
+        }
+
+        #help:focus {
+            border: 3px solid rgba(255, 255, 255, 0.473);
+        }
+
+        #help {
+            transition: 1s;
+            width: 6.5rem;
+            aspect-ratio: 7/3;
+            position: fixed;
+            bottom: 15px;
+            right: 20px;
+            background-color: #4c5fd5;
+            border-radius: 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            border: none;
+
+
+            div {
+                border: 2px solid white;
+                width: 15px;
+                aspect-ratio: 1/1;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 14px;
+                font-weight: bold;
+                color: white;
+            }
+
+
+            h2 {
+                color: white;
+                font-size: 15px;
+                margin-left: 10px;
+            }
+
+        }
+
+        .help-window {
+            position: fixed;
+            bottom: 15px;
+            right: 15px;
+            height: 79.5%;
+            width: 21.5rem;
+            display: grid;
+            grid-template-rows: 2.5rem 5fr 0.98fr;
+            background-color: white;
+            border-radius: 8px;
+            padding-bottom: 11px;
+
+            .help-window-header {
+                width: 100%;
+                grid-row: 1;
+                background-color: #4c5fd5;
+                border-radius: 8px 8px 0 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+
+                h4 {
+                    font-size: 15px;
+                }
+
+                #close-window {
+                    position: absolute;
+                    right: 25px;
+                    font-size: 10px;
+                    font-weight: 1000;
+                    cursor: pointer;
+                    transform: rotate(90deg);
+                }
+
+            }
+
+            .help-window-main {
+                grid-row: 2;
+                width: 90%;
+                margin: 0 auto;
+                display: flex;
+                padding-top: 20px;
+
+                .container {
+                    width: 20%;
+                    margin: 30px auto;
+
+                    .content {
+                        width: 85%;
+                        aspect-ratio: 1/1;
+                        background-color: lightblue;
+                        opacity: 0.8;
+                        border-radius: 50%;
+                        display: flex;
+                        justify-content: space-between;
+                        padding: 12px 5px 0;
+                        box-sizing: border-box;
+
+                        .eyes {
+                            width: 3px;
+                            height: 3px;
+                            /* aspect-ratio: 1/1; */
+                            background-color: black;
+                            border-radius: 50%;
+                            opacity: 0.6;
+                        }
+                    }
+                }
+
+
+                .message-container {
+
+                    display: flex;
+                    flex-flow: wrap column;
+                    position: relative;
+
+                    * {
+                        transition: none;
+                    }
+
+                    span {
+                        display: inline-block;
+                        margin-bottom: 10px;
+                        padding: 8px 15px;
+                        border-radius: 20px;
+                        font-size: 14px;
+
+                    }
+
+
+                    .bot-message-container {
+                        .bot-name {
+                            padding: 0 0 10px 10px;
+                        }
+
+                        .bot-message {
+                            max-width: 75.2%;
+
+                            span {
+                                background-color: rgba(128, 128, 128, 0.041);
+                            }
+                        }
+
+                    }
+
+                    .user-message {
+                        max-width: 75.2%;
+
+                        div {
+                            text-align: right;
+                            color: white
+                        }
+
+                        span {
+                            background-color: #4c5fd5;
+                            text-align: right;
+                        }
+                    }
+
+                    .btn-option {
+                        align-self: end;
+                        position: absolute;
+                        bottom: 15px;
+
+                        span {
+                            border: 1px solid #4c5fd5;
+                            color: #4c5fd5;
+                            text-align: right;
+                            cursor: pointer;
+                        }
+
+                        span:hover {
+                            color: white;
+                            background-color: #4c5fd5;
+                        }
+
+                    }
+
+                }
+            }
+
+            .help-window-footer {
+                grid-row: 3;
+                width: 90%;
+                margin: 0 auto;
+                height: 90%;
+                margin-bottom: 10px;
+                position: relative;
+                display: grid;
+
+
+                input {
+                    width: 95%;
+                    box-sizing: border-box;
+                    margin: 0 auto;
+                    padding: 0 0 30px 10px;
+                    border: 1px solid rgba(0, 0, 0, 0.242);
+                    border-radius: 5px;
+                    color: rgba(0, 0, 0, 0.8);
+                    font-size: 14px;
+                    transition: 300ms;
+                }
+
+                input:hover {
+                    border: 1px solid rgba(0, 0, 0, 0.49);
+                }
+                input:focus {
+                    outline: 3px solid rgba(0, 0, 0, 0.15);
+                }
+/* 
+                label {
+                    display: inline-block;
+                    position: absolute;
+                    margin: 10px 0 0 20px;
+                    font-size: 14px;
+                    color: rgba(0, 0, 0, 0.268);
+                } */
             }
         }
     }
