--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
     body {
         width: 100%;
+        position: relative;
 
         header {
             overflow: hidden;
@@ -312,6 +313,7 @@
             border: 3px solid rgba(255, 255, 255, 0.473);
         }
 
+
         #help {
             transition: 1s;
             width: 6.5rem;
@@ -362,6 +364,10 @@
             border-radius: 8px;
             padding-bottom: 11px;
 
+            * {
+                transition: 300ms;
+            }
+
             .help-window-header {
                 width: 100%;
                 grid-row: 1;
@@ -378,11 +384,20 @@
 
                 #close-window {
                     position: absolute;
-                    right: 25px;
+                    width: 25px;
+                    aspect-ratio: 1/1;
+                    right: 15px;
                     font-size: 10px;
                     font-weight: 1000;
                     cursor: pointer;
                     transform: rotate(90deg);
+                    display: grid;
+                    place-content: center;
+                    border-radius: 5px;
+                }
+
+                #close-window:hover {
+                    background-color: rgba(255, 255, 255, 0.45);
                 }
 
             }
@@ -517,19 +532,23 @@
                 input:hover {
                     border: 1px solid rgba(0, 0, 0, 0.49);
                 }
+
                 input:focus {
                     outline: 3px solid rgba(0, 0, 0, 0.15);
                 }
-/* 
-                label {
-                    display: inline-block;
-                    position: absolute;
-                    margin: 10px 0 0 20px;
-                    font-size: 14px;
-                    color: rgba(0, 0, 0, 0.268);
-                } */
+
             }
         }
     }
 
+}
+
+
+.disable {
+    display: none;
+}
+
+.descend {
+    position: absolute;
+    bottom: -1000px !important;
 }
